<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <TextView
        android:id="@+id/tv_developed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tv_programmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_programmer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_lecturer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_lecturer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_director"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_director"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_codirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_codirector"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/bt_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_close" />

</LinearLayout>