<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/bt_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="onClickResult"
        android:text="@string/bt_result" />

    <Button
        android:id="@+id/bt_adventure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_result"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAdventure"
        android:text="@string/bt_adventure" />

    <Button
        android:id="@+id/bt_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_result"
        android:layout_centerHorizontal="true"
        android:onClick="onClickTool"
        android:text="@string/bt_tool" />

</RelativeLayout>

